--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-<div class="app"></div>
+
+<div class="app">
+
+</div>
 <script type="module" src="/src/index.js"></script>
 </body>
 
