--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-
+<header class="header">
+    <div class="header header_left">
+        <a class="menu_name" id="menu_home" href="/">HOME</a>
+    </div>
+    <div class="header header_right">
+        <a class="menu_name" id="menu_signup" href="/sign">SIGNUP</a>
+    </div>
+</header>
 <div class="app">
 
 </div>
